Change icon color from slate to emerald

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ kaerez/speedtest/index.html
 
         // --- Custom Icons ---
         const ExternalIcon = () => (
-            <svg width="1.25em" height="1.25em" viewBox="0 0 33 24" fill="currentColor" className="inline-block ml-1 align-text-bottom text-slate-400 hover:text-blue-600 transition-colors">
+            <svg width="1.25em" height="1.25em" viewBox="0 0 33 24" fill="currentColor" className="inline-block ml-1 align-text-bottom text-emerald-500 hover:text-emerald-700 transition-colors">
                 <path d="m23 0 1 1v5.56h-2V2H2v20h20v-4.55h2V23l-1 1H1l-1-1V1l1-1zm4.47 6.56-1.4 1.42L29.13 11H12.01v2h17.12l-3.06 3.02 1.4 1.42L33 12z"></path>
             </svg>
         );
